# KronosEngine

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Character.cpp  Character.h  DataReader.cpp  DataReader.h  Decal.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  FontFactory.cpp  FontFactory.h  GameManager.cpp  GameManager.h  Glyph.cpp  Glyph.h  Ground.cpp  Ground.h  Item.h  KeyListener.cpp  KeyListener.h  LICENSE  Map.cpp  MapManager.cpp  MapManager.h  Matrix.cpp  Matrix.h  Object.cpp  Object.h  PhysicsManager.cpp  PhysicsManager.h  PhysicsSquare.cpp  PhysicsSquare.h  Platformer.cbp  Platformer.depend  PlayerControl.cpp  PlayerControl.h  (+15 more)
editor/: dialogs.py  guimenus.py  guisettings.py  main.py  mapclass.py  mapedit.py  mapentity.py  objedit.py  texture.py  texturemanager.py
include/: Camera.h  Character.h  Entity.h  EntityManager.h  EventManager.h  FileWatcher.h  FontFactory.h  GUIManager.h  GameEvent.h  GameManager.h  Glyph.h  Item.h  KeyListener.h  Map.h  MapManager.h  PhysicsSquare.h  Renderer.h  ResourceManager.h  Script.h  ScriptManager.h  Sound.h  Texture.h  Vector.h  defer.h
lib/angelscript/projects/cmake/: CMakeLists.txt
scripts/: test.as
shaders/: simpleshader.frag  simpleshader.vert  textshader.frag  textshader.vert
src/: CMakeLists.txt  Camera.cpp  Character.cpp  DataReader.cpp  Entity.cpp  EntityManager.cpp  EventManager.cpp  FileWatcher.cpp  FontFactory.cpp  GUIManager.cpp  GameEvent.cpp  GameManager.cpp  Glyph.cpp  Item.cpp  KeyListener.cpp  Map.cpp  MapManager.cpp  Matrix.cpp  PhysicsManager.cpp  PhysicsSquare.cpp  PlayerControl.cpp  Renderer.cpp  ResourceManager.cpp  Script.cpp  ScriptManager.cpp  Shader.cpp  Sound.cpp  Texture.cpp  Vector.cpp  Window.cpp
